# wedge4

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.txt  versioninfo.rc
example/: CMakeLists.txt
example/data/audio/mml/music/: battle.mml  example.mml  gameover.mml
example/data/audio/mml/sfx/: battle_start.mml  button.mml  enemy_attack.mml  hit.mml  melee.mml  potion.mml
example/data/audio/samples/: chest.flac  enemy_die.flac  victory.flac
example/data/gfx/images/battle_bgs/: example1.tga
example/data/gfx/images/tiles/: tiles0.tga
example/data/gfx/images/ui/: gui_window.tga  mouse_cursor.tga
example/data/gfx/palettes/: palette.gpl
example/data/gfx/shaders/glsl/: boss_die_fragment.txt  enemy_die_fragment.txt
example/data/gfx/shaders/hlsl/: appear_fragment.shader  boss_die_fragment.shader  default_vertex.shader  enemy_die_fragment.shader  noo_default_fragment.shader  noo_default_textured_fragment.shader  noo_default_vertex.shader  noo_model_fragment.shader
example/data/gfx/sprites/chest/: closed.json  closed.tga  open.json  open.tga  sprite.json
example/data/gfx/sprites/cursor/: right.json  right.tga  sprite.json
example/data/gfx/sprites/eny/: attack.tga  cast.json  cast.tga  dead.tga  fish.json  fish.tga  fish_no_catch.json  fish_no_catch.tga  hit.tga  jump_e.tga  jump_w.json  jump_w.tga  laugh.json  laugh.tga  punch.tga  reap.tga  sit_n.tga  sleep.tga  sprite.json  stab.json  stab.tga  stand_e.tga  stand_n.json  stand_n.tga  stand_s.tga  stand_w.tga  use.json  use.tga  victory.json  victory.tga  walk_e.tga  walk_n.tga  walk_s.tga  walk_w.json  walk_w.tga
example/data/gfx/sprites/hit/: hit.json  hit.tga  sprite.json
example/data/gfx/sprites/red_triangle/: only.json  only.tga
example/data/gfx/sprites/red_x/: only.json  only.tga  sprite.json
example/data/gfx/sprites/slime/: attack.json  attack.tga  die.json  die.tga  idle.json  idle.tga  sprite.json
example/data/misc/maps/: example2.wm2  start.wm2
example/data/text/: English.utf8
example/include/: area_game.h  battle_game.h  battle_player.h  battle_transition_in.h  battle_transition_in2.h  battle_transition_out.h  battle_transition_out2.h  battles.h  dialogue.h  enemies.h  general.h  globals.h  gui.h  hit.h  inventory.h  menu.h  transition.h  widgets.h
example/src/: area_game.cpp  battle_game.cpp  battle_player.cpp  battle_transition_in.cpp  battle_transition_in2.cpp  battle_transition_out.cpp  battle_transition_out2.cpp  battles.cpp  dialogue.cpp  enemies.cpp  example.cpp  general.cpp  globals.cpp  gui.cpp  hit.cpp  inventory.cpp  menu.cpp  transition.cpp  widgets.cpp
include/wedge4/: a_star.h  achieve.h  area.h  area_game.h  battle_end.h  battle_enemy.h  battle_entity.h  battle_game.h  battle_player.h  branch.h  change_angle.h  check_positions.h  chest.h  delay.h  delete_map_entity.h  fade.h  general.h  generic_callback.h  generic_gui.h  generic_immediate_callback.h  give_object.h  globals.h  input.h  internal.h  inventory.h  look_around_input.h  main.h  map_entity.h  npc.h  offset_arc.h  omnipresent.h  onscreen_controller.h  pause_player_input.h  pause_presses.h  pause_sprite.h  pause_task.h  play_animation.h  play_music.h  play_sound.h  player_input.h  (+22 more)
src/: a_star.cpp  achieve.cpp  area.cpp  area_game.cpp  battle_end.cpp  battle_enemy.cpp  battle_entity.cpp  battle_game.cpp  battle_player.cpp  branch.cpp  change_angle.cpp  check_positions.cpp  chest.cpp  delay.cpp  delete_map_entity.cpp  fade.cpp  game.cpp  general.cpp  generic_callback.cpp  generic_gui.cpp  generic_immediate_callback.cpp  give_object.cpp  globals.cpp  input.cpp  inventory.cpp  look_around_input.cpp  main.cpp  map_entity.cpp  npc.cpp  offset_arc.cpp  omnipresent.cpp  onscreen_controller.cpp  pause_player_input.cpp  pause_presses.cpp  pause_sprite.cpp  pause_task.cpp  play_animation.cpp  play_music.cpp  play_sound.cpp  player_input.cpp  (+24 more)
